--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ main {
     margin-top: 140px;
 }
 
-.quizzes-usuario{
+.quizzes-usuario-vazio{
     height: 181px;
     border: 1px dashed #D5D5D5;
     border-radius: 5px;
@@ -48,7 +48,7 @@ main {
     text-align: center;
 }
 
-.quizzes-usuario span{
+.quizzes-usuario-vazio span{
    color: rgba(185, 185, 185, 1);
    font-family: Roboto;
     font-size: 20px;
@@ -78,7 +78,7 @@ main {
 }
 
 
-.quizzes-servidor{
+.quizzes-servidor, .quizzes-servidor-2, .quizzes-usuario {
     margin-top: 70px;
     margin-left: 110px;
     margin-right: 100px;
@@ -87,9 +87,14 @@ main {
 .quizz-container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
-.quizzes-servidor span{
+.container-usuario{
+    display: flex;
+}
+
+.quizzes-servidor span, .quizzes-servidor-2 span, .quizzes-usuario span{
     font-family: Roboto;
     font-size: 20px;
     font-weight: 700;
@@ -100,27 +105,43 @@ main {
 
 }
 
+.titulo-secao{
+    display: flex;
+}
+
+.ion-icon{
+    color: red;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+}
+
 .escondido {
     display: none;
 }
 
 .capa-Quizz{
-    width:340px;
     height:181px;
+    width:330px;
     position: relative;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-right: 14px;
     display: flex;
     justify-content: center;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
 }
 
-.image-Quizz img{
+.image-Quizz > img{
     width:330px;
     height:181px;
     border-radius: 5px;
     object-fit: cover;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
-
+    position:relative;
+    z-index:-1;
+    display:block;
 }
 
 .titulo-Quizz{
@@ -135,11 +156,15 @@ main {
     display: flex;
     align-items: center;
     text-align: center;
-    margin-right: 5px;
     word-break: break-word;
     color: #FFFFFF;
     padding-right: 50px;
 
+}
+
+.quizzes-usuario{
+    margin-top: 140px;
+    margin-left: 140px;
 }
 
 /*MOBILE RESPONIVO*/
@@ -150,16 +175,35 @@ main {
         margin-top: 100px;
     }
 
-    .quizzes-usuario{
+    .quizzes-usuario-vazio{
         margin-left: 15px;
         margin-right: 15px;
     }
 
-    .quizzes-servidor{
+    .quizzes-servidor, .quizzes-servidor-2, .quizzes-usuario{
         margin-top: 25px;
         margin-left: 20px;
         margin-right: 15px;
     }
-    
 
+    .quizz-container, .container-usuario {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;   
+    }
+
+    .image-Quizz {
+        width: 100%;
+    } 
+
+    .image-Quizz > img{
+        width:100%;
+        
+    }
+
+    .capa-Quizz{
+    
+        width:100%;
+   
+    }
 }
