--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-body{
-    font-family: 'Roboto', sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
     box-sizing: border-box;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color: #FAFAFA;
 }
 
 header {
@@ -167,7 +169,100 @@ main {
     margin-left: 140px;
 }
 
-/*MOBILE RESPONIVO*/
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #BABABA;
+    opacity: 1; /* Firefox */
+  }
+
+.main-screen3 {
+    margin-top: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+
+    color: #000000;
+}
+
+.screen3-title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 23px;
+    line-height: 27px;
+}
+
+.card-forms {
+    margin-top: 27px;
+    padding: 21px 20px 24px 16px;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+}
+
+.card-forms input {
+    display: block;
+    width: 564px;
+    height: 46px;
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+    padding-left: 24px;
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 22px;
+    color: #BABABA;
+    margin-bottom: 9px;
+}
+
+.card-forms input:focus {
+    outline: none;
+}
+
+.card-forms label {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    display: flex;
+    align-items: center;
+
+    color: #000000;
+}
+
+.criar-perguntas-btn {
+    width: 370px;
+    height: 54px;
+    margin-top: 80px;
+
+    background: #EC362D;
+    border-radius: 15px;
+    border: none;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 21px;
+    line-height: 25px;
+    text-align: center;
+
+    color: #FFF5F4;
+}
+
+.main-screen3-2 .card-forms > label {
+    margin-bottom: 24px;
+}
+
+.main-screen3-2 .card-forms > input[type="text"] {
+    margin-bottom: 14px;
+}
+
+.main-screen3-2 .card-forms > input[type="url"] {
+    margin-bottom: 30px;
+}
+/*MOBILE RESPONSIVO*/
 
 @media(max-width: 1100px){
 
