--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ main {
 }
 /*MOBILE RESPONSIVO*/
 
-@media(max-width: 1100px){
+@media(max-width: 600px){
 
     main {
         margin-top: 100px;
@@ -331,5 +331,23 @@ main {
     
         width:100%;
    
+    }
+
+    .main-screen3-1, .main-screen3-2 {
+        width: 100%;
+    }
+
+    .card-forms {
+        width: 100%;
+        padding: 21px 20px 24px 16px;
+    }
+
+    .card-forms input {
+        width: 100%;
+    }
+
+    .criar-perguntas-btn {
+        font-size: 16px;
+        width: 80%;
     }
 }
