--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ main {
    
     }
 
-    .main-screen3-1, .main-screen3-2 {
+    .main-screen3-1, .main-screen3-2, .main-screen3-3 {
         width: 100%;
     }
 
