--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body{
 header {
     background-color: rgba(236, 54, 45, 1);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    position: absolute;
+    position: fixed;
+    z-index: 1;
     width: 100%;
     height: 69px;
     left: 0px;
@@ -80,7 +81,7 @@ main {
 }
 
 
-.quizzes-servidor, .quizzes-servidor-2, .quizzes-usuario {
+.quizzes-servidor, .quizzes-usuario {
     margin-top: 70px;
     margin-left: 110px;
     margin-right: 100px;
@@ -96,7 +97,7 @@ main {
     display: flex;
 }
 
-.quizzes-servidor span, .quizzes-servidor-2 span, .quizzes-usuario span{
+.quizzes-servidor span, .quizzes-usuario span{
     font-family: Roboto;
     font-size: 20px;
     font-weight: 700;
@@ -173,6 +174,111 @@ main {
     color: #BABABA;
     opacity: 1; /* Firefox */
   }
+.pagina-quizz{
+    background-color: #E5E5E5;
+    position: relative;
+    z-index: 0;
+}
+
+.banner{
+    margin-top: 70px;
+    height: 227px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
+}
+
+.imagem-banner{
+    width: 100%;
+}
+
+.imagem-banner > img{
+    height: 227px;
+    width: 100%;
+    object-fit: cover;
+    position:relative;
+    z-index:-1;
+    display:block;
+}
+
+.tituloQuizz-selecionado{
+    position: absolute;
+    bottom: 90px;
+    font-family: Roboto;
+    font-size: 39px;
+    font-weight: 400;
+    line-height: 46px;
+    letter-spacing: 0em;
+    text-align: center;
+    word-break: break-word;
+    color: rgba(255, 255, 255, 1);
+
+
+}
+
+.todasAsPerguntas{
+    margin-top: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.arcabouco{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+    padding: 20px 20px;
+    background-color: white;
+}
+
+.perguntas{
+    background: rgba(67, 76, 160, 1);
+    width: 100%;
+    height: 140px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.perguntas > span {
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 700;
+    line-height: 27px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+
+}
+
+.alternativas{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+}
+
+.imgAlternativa > img{
+    width: 330px;
+    height: 176px;
+}
+
+.txtAlternativa{
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 23px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 5px;
+}
 
 .main-screen3 {
     margin-top: 130px;
@@ -306,7 +412,7 @@ main {
         margin-right: 15px;
     }
 
-    .quizzes-servidor, .quizzes-servidor-2, .quizzes-usuario{
+    .quizzes-servidor, .quizzes-usuario{
         margin-top: 25px;
         margin-left: 20px;
         margin-right: 15px;
@@ -349,5 +455,13 @@ main {
     .criar-perguntas-btn {
         font-size: 16px;
         width: 80%;
+    }
+    .imagem-banner > img{
+        width:100%;
+        
+    }
+
+    .imgAlternativa > img {
+        width: 100%;
     }
 }
