--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ main {
     letter-spacing: 0em;
     text-align: center;
     color: rgba(255, 255, 255, 1);
-
+    word-break: break-all;
 }
 
 .alternativas{
@@ -278,6 +278,7 @@ main {
     text-align: left;
     padding-left: 10px;
     padding-top: 5px;
+    word-break: break-all;
 }
 
 .main-screen3 {
